<resources>
    <string name="app_name">BiteByByte</string>
    <string name="title_home">Home</string>
    <string name="title_create">Create</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_post_default_title">Title</string>
    <string name="create_post_tags">Tags</string>
    <string name="create_post_add_label">Add Label</string>
    <string name="plus_icon_desc">Plus Icon</string>
    <string name="create_post_estimated_time">Estimated time</string>
    <string name="create_post_description_label">Description</string>
    <string name="create_post_method_label">Method</string>
    <string name="create_post_button">Create post</string>
    <string name="create_post_ingredients_label">Ingredients</string>
    <string name="navigation_feed">Feed</string>
    <string name="navigation_create">Create</string>
    <string name="navigation_saved">Saved</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="my_recipes">My recipes</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="search_gallary">Search Gallery</string>
    <string name="post_detail_description_title">Description</string>
    <string name="post_detail_method_title">Method</string>
    <string name="post_detail_ingredients_title">Ingredients</string>
    <string name="post_detail_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam consectetur leo at elit volutpat auctor. Etiam dapibus dui mi, sit amet pretium arcu tempus ut. Mauris dapibus feugiat elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi rutrum velit mollis venenatis consequat. Fusce a velit sed tellus hendrerit viverra.</string>
    <string name="post_detail_comment">Comment...</string>
    <string name="post_detail">Post Details</string>
    <string name="post_comments">Post Comments</string>
    <string name="post_detail_comments_type_comment">Type comment...</string>
</resources>