<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bitebybyte.ui.home.HomeFragment"
        android:label="@string/navigation_feed"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.bitebybyte.ui.create.CreateFragment"
        android:label="@string/navigation_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.bitebybyte.ui.saved.SavedFragment"
        android:label="@string/navigation_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/post_detail"
        android:name="com.bitebybyte.ui.post.PostDetailFragment"
        android:label="@string/post_detail"
        tools:layout="@layout/fragment_post_detail" />
</navigation>