<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="40sp"
                android:text="@string/create_post_default_title"
                android:textColor="@color/text_primary">
            </TextView>
            <!-- Add a pressable object without text, fills the entire width with a margin of 40dp and a height of 200dp -->
            <Button
                android:id="@+id/create_post_image_button"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/create_post_camera_preview"
                android:gravity="center"
                android:textSize="20sp"
                />
            <!-- Add a row view with a text view and a button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="40dp">
                <TextView
                    android:id="@+id/create_post_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_post_tags"
                    android:layout_marginEnd="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/text_primary"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="14sp"
                        android:layout_height="14sp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_plus"
                        android:contentDescription="@string/plus_icon_desc" />
                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:background="@null"
                        android:textAllCaps="false"
                        android:text="@string/create_post_add_label"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>