<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.post.PostDetailPostFragment">

        <ImageView
            android:id="@+id/post_detail_author_picture"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="UserProfile Picture"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_detail_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@android:drawable/ic_menu_myplaces"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/post_detail_delete_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Delete post"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/post_detail_title"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_trash_black_24dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_method_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_method_title" />

        <ImageView
            android:id="@+id/post_detail_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment_amount"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_comment_amount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toTopOf="@+id/post_detail_comment_amount"
            app:srcCompat="@drawable/round_chat_bubble_outline_24" />

        <TextView
            android:id="@+id/post_detail_method_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/post_detail_method_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_heading"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toBottomOf="@+id/view7" />

        <TextView
            android:id="@+id/post_detail_cooking_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="2 hours"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_cooking_time_icon"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_cooking_time_icon"
            app:layout_constraintTop_toTopOf="@+id/post_detail_cooking_time_icon" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_description_title" />

        <TextView
            android:id="@+id/post_detail_ingredients_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingHorizontal="0dp"
            android:text="@string/post_detail_description_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toTopOf="@+id/view7"
            app:layout_constraintEnd_toEndOf="@+id/post_detail_description_text"
            app:layout_constraintStart_toStartOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_comment_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_author_picture"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_description_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_comment_input" />

        <TextView
            android:id="@+id/post_detail_ingredients_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/post_detail_ingredients_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_heading"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_ingredients_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_ingredients_title" />

        <TextView
            android:id="@+id/post_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@null"
            android:text=""
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintBottom_toTopOf="@id/post_detail_author_picture"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_delete_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Lasagne" />

        <ImageView
            android:id="@+id/post_detail_bookmark_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="@+id/post_detail_cooking_time_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/post_detail_likes_amount"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_favorites_black_24dp" />

        <View
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_method_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_ingredients_text" />

        <TextView
            android:id="@+id/post_detail_method_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingHorizontal="0dp"
            android:paddingBottom="10dp"
            android:text="@string/post_detail_description_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/post_detail_description_text"
            app:layout_constraintStart_toStartOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <ImageView
            android:id="@+id/post_detail_likes_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_likes_amount"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_likes_amount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/post_detail_comment_amount"
            app:layout_constraintTop_toTopOf="@+id/post_detail_likes_amount"
            app:srcCompat="@drawable/round_favorite_border_24" />

        <ImageView
            android:id="@+id/post_detail_cooking_time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_author_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/post_detail_author_picture"
            app:srcCompat="@drawable/baseline_av_timer_24" />

        <TextView
            android:id="@+id/post_detail_comment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_likes_icon"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_likes_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/post_detail_comment_icon"
            app:layout_constraintTop_toTopOf="@+id/post_detail_likes_icon" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray_300"
            app:layout_constraintBottom_toTopOf="@+id/post_detail_ingredients_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_description_text" />

        <TextView
            android:id="@+id/post_detail_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingHorizontal="0dp"
            android:text="@string/post_detail_description_text"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/post_detail_bookmark_icon"
            app:layout_constraintStart_toStartOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:id="@+id/post_detail_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/post_detail_description_title"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_heading"
            app:layout_constraintBottom_toTopOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/post_detail_comment_input"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/post_detail_comment_input"
            style="@style/CameraButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="12dp"
            android:text="@string/post_detail_comment"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_comment_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="@+id/post_detail_author_picture"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/post_detail_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Ashley"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_author_picture"
            app:layout_constraintStart_toEndOf="@+id/post_detail_author_picture" />

        <TextView
            android:id="@+id/post_detail_likes_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="20"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_bookmark_icon"
            app:layout_constraintEnd_toStartOf="@+id/post_detail_bookmark_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/post_detail_likes_icon"
            app:layout_constraintTop_toTopOf="@+id/post_detail_bookmark_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>